<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/record_problem_title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Enter_Record_Details"
        android:textSize="26dp" />

    <EditText
        android:id="@+id/record_title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Add_Title" />

    <EditText
        android:id="@+id/record_description_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Add_Description" />

    <Button
        android:id="@+id/record_camera_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/record_geo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Geolocation" />
        <TextView
            android:id="@+id/location_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Body_Location" />

    <Button
        android:id="@+id/record_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Add" />

</LinearLayout>