<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <TextView
        android:id="@+id/record_problem_title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dp"
        android:text="@string/Enter_Record_Details"
        android:textColor="#D3D3D3"
        android:textSize="26dp" />

    <EditText
        android:id="@+id/record_title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/record_problem_title_text_view"
        android:text="@string/Add_Title"
        android:paddingLeft="10dp"
        android:textColor="#16BBE5"
        android:textColorHint="#D3D3D3" />

    <EditText
        android:id="@+id/record_description_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/record_title_edit_text"
        android:text="@string/Add_Description"
        android:inputType="textCapSentences|textMultiLine"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:textColor="#16BBE5"
        android:textColorHint="#D3D3D3" />

    <Button
        android:id="@+id/record_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/bodyLocation"
        android:background="@drawable/signupbtn1"
        android:paddingHorizontal="50dp"
        android:text="@string/Add" />

</RelativeLayout>